fix z-index issues

--- a/application/stylus/organisms/present.styl
+++ b/application/stylus/organisms/present.styl
@@ -9,6 +9,10 @@
 .survey #present,
 .survey #callback
   {align}: 100% - surveyWidth
+#callback
+  z-index: -1
+.callback #callback
+  z-index: auto
 
 //  START BUTTON
 #start
